--- a/crud/templates/index.html
+++ b/crud/templates/index.html
@@ -77,6 +77,8 @@
                     <th>Name</th>
                     <th>Email ID</th>
                     <th>Task</th>
+                    <th>Designation</th>
+                    <th>Joining_date</th>
 
                     <th>Action</th>
                     <th>Action</th>
