--- a/crud/templates/add.html
+++ b/crud/templates/add.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="col-md-12">
-  <h4>Django CRUD (Create Read Update Delete) Example - Bootstrap Datatable</h4>
+  <h4>Django CRUD (Create Read Update Delete)</h4>
 
   <form method="POST" class="post-form" action="/addnew">
     {% csrf_token %}
@@ -33,6 +33,12 @@
         <label class="col-sm-2 col-form-label">Employee Task:</label>
         <div class="col-sm-4">
           {{ form.task }}
+        </div>
+      </div>
+      <div class="form-group row">
+        <label class="col-sm-2 col-form-label">Employee Designation:</label>
+        <div class="col-sm-4">
+          {{ form.designation }}
         </div>
       </div>
       <div class="form-group row">
