--- a/crud/templates/edit.html
+++ b/crud/templates/edit.html
@@ -4,7 +4,7 @@
  
 {% block content %}
 <div class="col-md-12">
-    <h4>Django CRUD (Create Read Update Delete) Example - Bootstrap Datatable</h4>  
+    <h4>Django CRUD (Create Read Update Delete)</h4>  
  <form method="POST" class="post-form" action="/update/{{employee.id}}">  
    {% csrf_token %}  
   <div class="container">  
@@ -33,6 +33,12 @@
    <input type="text" class="form-control" name="task" id="txtTask" required maxlength="500" value="{{ employee.task }}" />  
   </div>  
    </div>  
+   <div class="form-group row">  
+    <label class="col-sm-2 col-form-label">Employee Designation:</label>  
+    <div class="col-sm-4">  
+     <input type="text" class="form-control" name="designation" id="txtDesignation" required maxlength="500" value="{{ employee.designation }}" />  
+    </div>  
+     </div>  
   <div class="form-group row">  
   <label class="col-sm-1 col-form-label"></label>  
   <div class="col-sm-4">  
