--- a/crud/templates/ajax.html
+++ b/crud/templates/ajax.html
@@ -1,10 +1,5 @@
 <script>
 
-
-
-    /// GET METHOD
-
-
     $(document).ready(function () {
         BindEmployees();
     });
@@ -22,148 +17,28 @@
                         "      <td>" + result[i].name + "</td>" +
                         "             <td>" + result[i].email + "</td>" +
                         "              <td>" + result[i].task + "</td>" +
-<<<<<<< HEAD
-                        "            <td><button class='fa fa-edit btn btn-warning btn-sm btn-edit' EditRow = " + result[i].id + "> Edit</button></td>" +
-                        "              <td><button class='fa fa-trash btn btn-danger btn-sm btn-del' DeleteRow = " + result[i].id + "> Delete</button></td>" +
-=======
                         "                <td>" + result[i].designation + "</td>" +
                         "                 <td>" + result[i].joining_date + "</td>" +
                         "            <td><button class='fa fa-edit btn btn-warning btn-sm' onclick='return confirm(\"Are you sure you want to edit this record?\",EditRow(" + result[i].id + "))'> Edit</button></td>" +
                         "              <td><button class='fa fa-trash btn btn-danger btn-sm' onclick='return confirm(\"Are you sure you want to delete this record?\",DeleteRow(" + result[i].id + "))'> Delete</button></td>" +
->>>>>>> 58128533b0fef8faead8cfb03148f6da5c1b2288
                         "           </tr>";
                 }
 
                 $("#divBody").html(structureDiv);
-                $('#txtId').val('');
+
             }
         });
 
     }
 
+    function EditRow(id) {
+            
+        window.location.assign("edit/"+id); 
+    }
 
-
-    /// POST METHOD
-
-
-
-    $("#btnsave").click(function () {
-        console.log("save button clicked")
-        let id = $('#txtId').val();
-        let name = $('#txtName').val();
-        let email = $('#txtEmailid').val();
-        let task = $('#txtTask').val();
-        let csr = $("input[name=csrfmiddlewaretoken]").val();
-        if (name == "") {
-            console.log("Please enter your name");
-        }
-        else if (email == "") {
-            console.log("Enter your email");
-        }
-        else if (task == "") {
-            console.log("enter your task");
-        }
-        else {
-            mydata = { id: id, name: name, email: email, task: task, csrfmiddlewaretoken: csr };
-            $.ajax({
-                url: "http://127.0.0.1:8000/api/save/",
-                //  {% url 'save' %}
-                method: "POST",
-                data: mydata,
-                success: function (data) {
-                    // console.log(data);
-                    x = data.employee_data
-                    if (data.status == "Save") {
-                        console.log("Form submitted succesfully");
-                        // console.log(data.employee_data);
-                        $('form')[0].reset();
-                        var structureDiv = "";
-                        for (let i = 0; i < x.length; i++) {
-                            structureDiv += "<tr>" +
-                                "     <td>" + x[i].id + "</td>" +
-                                "      <td>" + x[i].name + "</td>" +
-                                "             <td>" + x[i].email + "</td>" +
-                                "              <td>" + x[i].task + "</td>" +
-                                "            <td><button class='fa fa-edit btn btn-warning btn-sm btn-edit' EditRow = " + x[i].id + "> Edit</button></td>" +
-                                "              <td><button class='fa fa-trash btn btn-danger btn-sm btn-del' DeleteRow= " + x[i].id + " > Delete</button></td>" +
-                                "           </tr>";
-                        }
-                        $("#divBody").html(structureDiv);
-                        $('#txtId').val('');
-                    }
-                    if (data.status == "Not Save") {
-                        console.log("Form not submitted");
-                    }
-
-                },
-            });
-        }
-    });
-
-
-
-    /// Edit method
-
-
-    $("tbody").on("click", ".btn-edit", function () {
-        if (confirm("Are you sure you want to edit this record?")) {
-            let id = $(this).attr("EditRow");
-            console.log(id)
-            let csr = $("input[name=csrfmiddlewaretoken]").val();
-            mydata = { id: id, csrfmiddlewaretoken: csr };
-            mythis = this;
-            $.ajax({
-                url: "http://127.0.0.1:8000/api/edit/",
-                method: "POST",
-                data: mydata,
-                success: function (data) {
-                    // console.log(data);
-                    $("#txtId").val(data.id);
-                    $("#txtName").val(data.name);
-                    $("#txtEmailid").val(data.email);
-                    $("#txtTask").val(data.task);
-
-                },
-            });
-        }
-        else {
-            console.log("Not Edited")
-        }
-    });
-
-
-
-
-    /// DELETE METHOD
-
-    $("tbody").on("click", ".btn-del", function () {
-        if (confirm("Are you sure you want to delete this record?")) {
-            let id = $(this).attr("DeleteRow");
-            console.log(id)
-            let csr = $("input[name=csrfmiddlewaretoken]").val();
-            mydata = { id: id, csrfmiddlewaretoken: csr };
-            mythis = this;
-            $.ajax({
-                url: "http://127.0.0.1:8000/api/delete/",
-                method: "POST",
-                data: mydata,
-                success: function (data) {
-                    // console.log(data);
-                    if (data.status == 1) {
-                        console.log("Data deleted Successfully");
-                        $(mythis).closest("tr").fadeOut();
-                        // $(mythis).parents()[1].remove(id);
-                    }
-                    if (data.status == 0) {
-                        console.log("Unable to delete data")
-                    }
-                },
-            });
-        }
-        else {
-            console.log("Not deleted")
-        }
-    });
-
+    function DeleteRow(id) {
+            
+        window.location.assign("delete/"+id); 
+    }
 
 </script>
